crates/ink/tests/ui/event/fail/unknown_attribute.stderr
error: encountered unknown or unsupported ink! event item configuration argument
 --> tests/ui/event/fail/unknown_attribute.rs:3:7
  |
3 | #[ink(my_arg)]
  |       ^^^^^^
